[package]
name = "dbus_tray"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "2.0.1"
futures-util = "0.3.19"
serde = "1.0.136"
image = "0.23.14"
serde_json = "1.0.78"
[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]